--- a/styles/refined-styles/button.css
+++ b/styles/refined-styles/button.css
@@ -41,47 +41,27 @@
     padding: clamp(2px, 2vw, 10px);
   }
 
-.main-button_wrapper{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height:auto;
-    margin: 32px auto;
-}
-.main-button{
-    width: 80%;
-    max-width: 350px;
-    height:50px;
-    background: linear-gradient(to left top, var(--medium) 50%, var(--dark) 50%);
-    border-style: none;
-    color:#fff;
-    font-size: clamp(16pt, 1vw, 20pt);
-    letter-spacing: 3px;
-    font-family: 'Lato';
-    font-weight: 600;
-    outline: none;
-    cursor: pointer;
+.main-button_wrapper {
     position: relative;
-    padding: 0px;
-    margin: auto;
-    overflow: hidden;
-    transition: all .5s;
-    box-shadow: 0px 4px 8px rgba(0,0,0,.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100px;
+    margin-top: var(--spacing-l);
 }
-button span{
+
+.blob-button {
     position: absolute;
-    display: block;
-}
-button span:nth-child(1){
-    height: 3px;
-    width:200px;
-    top:0px;
-    left:-200px;
-    background: linear-gradient(to right, rgba(0,0,0,0), var(--light));
-    border-top-right-radius: 1px;
-    border-bottom-right-radius: 1px;
-    animation: span1 2s linear infinite;
-    animation-delay: 1s;
+    top: 40%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: var(--mainTwo);
+    font-weight: 200;
+    z-index: 1000;
+    text-decoration: none;
+    font-size: clamp(16pt, 5vw, 18pt);
 }
 
 @keyframes span1{
